# pdp

./: .env.example  .gitignore  BRD.md  Dockerfile  README.md  VERCEL.md  _fitpass_state.json  docker-compose.yml  index.py  new_feature_request.txt  pyproject.toml  render.yaml  requirements.txt  vercel.json  vercel_app.py
alembic/: env.py
alembic/versions/: 0a1e222eec57_add_full_pipeline_columns.py  b3c4d5e6f7a8_reports_list_indexes.py
api/: index.py  requirements.txt
app/: main.py
app/agents/: aeo_agent.py  aeo_preprocessor.py  autofix_agent.py  blueprint_agent.py  business_agent.py  claude_client.py  (+28 more)
benchmarks/: benchmark_runner.py  sample_urls.json
frontend/: check_glossary.json  index.html  pdf_parity.js
public/: config.json  index.html
scripts/: _offline_gt_check.py  _probe_boat.py  _probe_boat2.py  capture_cto_ui_screenshots.py  check_tables.py  cross_store_validation.py  export_full_mode1_audit.py  fetch_latest_fitpass_report.py  final_cto_demo_validation.py  finalize_gt_report.py  ground_truth_validation.py  offline_extraction_validation.py  regenerate_ground_truth_report.py  run_extraction_reliability_tests.py  run_fitpass_via_api.py  run_mass_mode1_tests.py  run_pdf_parity.node.cjs  sprint_a_validation.py  validate_boat_mamaearth.py  validate_check_parity.py  validate_extraction_fixes.py  validate_pdf_parity.py  validate_platform_extractors.py  validate_title_and_fields.py  vercel_build_config.py  verify_fitpass_audit.py
tests/: test_audit_findings.py  test_check_registry.py  test_pdp_signals.py  test_platform_parity.py  test_scrape_gate.py
(+69 files in other folders)
