[project]
name = "optipdp"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "aiofiles==24.1.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "anthropic==0.40.0",
    "langgraph==0.2.73",
    "langchain-anthropic==0.2.4",
    "langchain-core==0.3.29",
    "python-jose[cryptography]==3.3.0",
    "PyJWT==2.9.0",
    "cryptography==43.0.1",
    "tenacity==9.0.0",
    "structlog==24.4.0",
    "python-docx",
    "pypdf",
    "python-pptx",
    "pillow",
]

[tool.vercel]
entrypoint = "vercel_app:app"

[tool.vercel.scripts]
build = "python scripts/vercel_build_config.py"
